--- a/src/Style/Donate.css
+++ b/src/Style/Donate.css
@@ -1,66 +1,222 @@
 .donateBody{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    background-color:#366227
-    }
+   width: 100%;
+   height: max-content;
+   overflow-y: auto;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   background-color:#4aee13
+   }
 
-    .donateHeader{
-    width: 85%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    }
+   .donateHeader{
+   width: 95%;
+   height: 20vh;
+   display: flex;
+   background-color: white;
+   justify-content: center;
+   align-items: center;
+   }
 
-    .donateMoney{
-      width: 85%;
-      height: 5%;
-      background-color:#366227 ;
-      display: flex;
-      align-items: center;
-      gap: 30px;
-
-
-
-      & h1{
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-weight: 800;
-      color: white;
-      }
-
-    }
-
-
-    .donateDesc{
-     width: 85%;
-     height: 50%;
+   .donateMoney{
+     width: 95%;
+     height: 15vh;
+     background-color:#366227 ;
      display: flex;
-     justify-content: center;
-    }
+     align-items: center;
 
- .descRiption{
-    width: 100%;
-    height: 100%;
+
+
+     & h1{
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     font-weight: 800;
+     margin-left: 180px;
+     color: white;
+     font-size: 35px;
+     }
+
+   }
+
+
+   .donateDesc{
+    width: 95%;
+    height: 100vh;
+    background-color: white;
     display: flex;
     justify-content:center;
+    align-items:center ;
+    flex-direction: column;
+   }
+
+.descRiption{
+   width: 65%;
+   height: 40vh;
+   display: flex;
+   flex-direction: column;
+   justify-content:center; 
+   align-items:center ;
+   margin-bottom: 80px;
+   
 
 
-
-
-    & p{
-        width: 100%;
-        height:20% ;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-     
+   & p{
+       width: 100%;
+       height:20vh ;
+       font-family: sans-serif;
+   
+       
+   &  h5{
+      font-weight: 700;
+   }
     
-        
-    &  h5{
-       font-weight: 700;
-    }
-     
-    }
+   }
+
+}
+
+
+.descImage{
+   width:75%;
+   height: 100vh;
+   background-color: #191d18;
+
+}
+
+.donatePay{
+   width:95%;
+   height:35vh;
+   background-color: white;
+   display: flex;
+   justify-content: center;
+
+}
+
+
+.paymentPlatform{
+   width: 70%;
+   height: 100%;
+   display: flex;
+   align-items: flex-end;
+   gap: 15px;
+
+}
+
+.visaPay{
+  width: 100%;
+  height: 90%;
+  background-color: white;
+
+
+
+  & h1{
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+
+  }
+
+
+
+  & img{
+     width: 30px;
+     background: transparent;
+
+  }
+}
+
+
+
+button {
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  background-color:#366227 ;
+  color: white;
+  font-size: larger;
+  font-weight: bold;
+}
+
+
+.partnersDiv{
+  width: 95%;
+  height: 70vh;
+  background-color:white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.partnersLink{
+  width: 80%;
+  height: 65%;
+  background-color:#366227;
+  display: flex;
+}
+
+
+.meetDiv{
+ width: 35%;
+ height: 100%;
+/* background-color: black; */
+ display: flex;
+ justify-content: center;
+ align-items: center;
+
+
+
+ & h1 {
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ color: white;
+ font-size: 40px;
 
 
 
  }
+}
+
+
+.sponsorDiv{
+ width: 60%;
+ height: 100%;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ gap: 5px;
+
+ 
+ 
+}
+
+
+.sponsorDiv1{
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
+}
+
+
+
+.sponsorDiv2{
+  width: 100%;
+  height: 90%;
+  display: flex;
+  gap: 15px;
+
+}
+
+
+ .sponsorImg{
+  width: 100%;
+  height: 90%;
+  background-color: white;
+  
+}
+
+.sponsorImg1{
+  width: 100%;
+  height: 90%;
+  background-color: white;
+  
+}
+ 
