--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -11,7 +11,7 @@
     width: 60%;
     height: 100px;
     border-radius: 50px;
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -39,11 +39,12 @@
     align-items: center;
 
 
+
     & h4{
         font-size: 15px;
         cursor: pointer;
         transition:  color 0.3 ease;
-
+        color: black;
     }
 
     & h4:hover{
