--- a/src/Style/Donateform.css
+++ b/src/Style/Donateform.css
@@ -8,7 +8,159 @@
     background-color:#4aee13
 }
 
+.donateimgPart{.formBody{
+    width: 100%;
+    height: max-content;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:#4aee13
+}
+
 .donateimgPart{
+    width: 95%;
+    height:100vh;
+    background-color: rgba(0, 0, 0, 0.741);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+/* .donateimgPart{
+    background-image: ;
+    position-;
+} */
+
+.iconHub{
+    width:95%;
+    height: 12vh ;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+
+    
+}
+
+.closeIcon {
+    cursor: pointer;
+    transition: color 0.9s ease-in-out; 
+}
+
+.closeIcon:hover {
+    color: #4aee13; 
+}
+
+
+
+.giveOnce{
+  width:80% ;
+  height: 7vh;
+  display: flex;
+  justify-content: space-between;
+
+
+  & h4{
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
+.donaButton{
+ display:flex;
+ align-items: center;
+ gap: 1px ;
+
+}
+
+
+.giveButton{
+    width: 170px;
+    height: 50px;
+   color: white;
+   border:1px solid white;
+   border-radius: 0px;
+   background-color: transparent;
+   font-weight: 100; 
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.fillForm{
+   width: 90%;
+   height: 70vh;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
+
+   & h1{
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
+   }
+
+}
+
+.propFinace{
+ font-size: 30px;
+ margin-top: 5px;
+ color: white;
+}
+
+
+.cornerHub{
+width:60%;
+height: 80%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin-bottom: 40px;
+margin-left: 70px;
+
+}
+
+.formDonation{
+   width: 40%;
+   height: 95%;
+   background-color: white;
+   display: flex;
+   flex-direction: column;
+   margin-right: 50px;
+
+
+& input{
+    width: 90%;
+    height: 25%;
+    display: flex;
+    align-self: center;
+    border: 1px solid black;
+    padding:4px;
+}
+  & p {
+     padding-left: 25px;
+     font-size: 15px;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     
+
+
+  }
+
+}
+
+
+.donaTon{
+    width: 92%;
+    height: 30%;
+    border-radius: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    border: 1px solid black;
+    margin-bottom: 10px;
+
+}
     width: 95%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.741);
