--- a/src/Style/About.css
+++ b/src/Style/About.css
@@ -51,14 +51,14 @@
         justify-content: center;
         position: absolute;
 
-        & div{
+        & nav{
             width: 67%;
             height: 87%;
-            background-color: white;
+            /* background-color: white; */
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px ;
+            gap: 30px ;
             position: relative;
         }
     }
@@ -71,7 +71,7 @@
     justify-content: center;
     align-items: center;
     background: url(../assets/Images/babygirlEdite.jpg)   no-repeat center center/cover;
-    border-radius: 10px;
+    border-radius: 20px;
     position: relative;
 
 
@@ -79,11 +79,8 @@
 
 .blackBackroud{
     width: 100%;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.445);
-    position: absolute;
-    top: 0;
-    left: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.274);
 }
 
 
@@ -92,4 +89,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    gap: 15px;
+}
+
+.greenBar{
+    width: 10%;
+    height: 10%;
+    background-color: ;
 }
