--- a/src/Style/Donate.css
+++ b/src/Style/Donate.css
@@ -1,221 +1,151 @@
-.donateBody {
+.formBody{
   width: 100%;
   height: max-content;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #4aee13;
+  background-color:#4aee13
 }
 
-.donateHeader {
+.donateimgPart{
   width: 95%;
-  height: 20vh;
-  display: flex;
-  background-color: white;
-  justify-content: center;
-  align-items: center;
-}
-
-.donateMoney {
-  width: 95%;
-  height: 15vh;
-  background-color: #366227;
-  display: flex;
-  align-items: center;
-}
-
-.donateMoney h1 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 800;
-  margin-left: 180px;
-  color: white;
-  font-size: 35px;
-}
-
-.donateDesc {
-  width: 95%;
-  height: 100vh;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.descRiption {
-  width: 65%;
-  height: 40vh;
+  height:100vh;
+  background-color: rgba(0, 0, 0, 0.741);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-bottom: 80px;
+
 }
 
-.descRiption p {
-  width: 100%;
-  height: 20vh;
-  font-family: sans-serif;
-}
+/* .donateimgPart{
+  background-image: ;
+  position-;
+} */
 
-.descRiption h5 {
-  font-weight: 700;
-}
-
-.descImage {
-  width: 75%;
-  height: 100vh;
-  background-color: #191d18;
-}
-
-.donatePay {
-  width: 95%;
-  height: 35vh;
-  background-color: white;
+.iconHub{
+  width:95%;
+  height: 12vh ;
   display: flex;
-  justify-content: center;
-}
+  align-items: center;
+  justify-content: end;
 
-.paymentPlatform {
-  width: 70%;
-  height: 100%;
-  display: flex;
-  align-items: flex-end;
-  gap: 15px;
-}
-
-.visaPay {
-  width: 100%;
-  height: 90%;
-  background-color: white;
-}
-
-.visaPay h2 {
-  font-size: 30px; 
-  font-weight: bold;
   
 }
 
-.visaPay p:first-of-type {
-  margin-top: -20px;
-  font-size: 14px;
+.closeIcon {
+  cursor: pointer;
+  transition: color 0.9s ease-in-out; 
 }
 
-.visaPay div {
-  display: flex;
-  align-items: center;
-  gap: 5px; 
-
-}
-
-.visaPay img:first-child {
-  width: 35px;
-}
-
-.visaPay svg {
-  width: 80px;
-  height: auto;
-}
-
-.visaPay img:last-child {
-  width: 75px;
-}
-
-.visaPay button {
-  margin-top: 15px; 
-}
-
-
-.visaPay p {
-  font-size: 16px;
-
-}
-
-/* Bold "ACCOUNT NAME", "BANK", "SWIFT CODE", etc., and remove space */
-.visaPay p:nth-child(3),
-.visaPay p:nth-child(4),
-.visaPay p:nth-child(5),
-.visaPay h5 {
-  font-weight: bold;
+.closeIcon:hover {
+  color: #4aee13; 
 }
 
 
 
+.giveOnce{
+width:80% ;
+height: 7vh;
+display: flex;
+justify-content: space-between;
 
-button {
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: #366227;
+
+& h4{
   color: white;
-  font-size: larger;
-  font-weight: bold;
+  font-family: "Montserrat", serif;  }
 }
 
-.partnersDiv {
-  width: 95%;
-  height: 70vh;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.donaButton{
+display:flex;
+align-items: center;
+gap: 1px ;
+
 }
 
-.partnersLink {
-  width: 80%;
-  height: 65%;
-  background-color: #366227;
-  display: flex;
-}
 
-.meetDiv {
-  width: 35%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+.giveButton{
+  width: 170px;
+  height: 50px;
+ color: white;
+ border:1px solid white;
+ border-radius: 0px;
+ background-color: transparent;
+ font-weight: 100; 
+ font-family: "Montserrat", serif;}
 
-.meetDiv h1 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: white;
+.fillForm{
+ width: 90%;
+ height: 70vh;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ font-family: "Montserrat", serif;
+
+
+ & h1{
   font-size: 40px;
+  font-weight: bolder;
+  color: white;
+ }
+
 }
 
-.sponsorDiv {
-  width: 60%;
-  height: 100%;
+.propFinace{
+font-size: 30px;
+margin-top: 5px;
+color: white;
+}
+
+
+.cornerHub{
+width:60%;
+height: 80%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin-bottom: 40px;
+margin-left: 70px;
+
+}
+
+.formDonation{
+ width: 40%;
+ height: 95%;
+ background-color: white;
+ display: flex;
+ flex-direction: column;
+ margin-right: 50px;
+
+
+& input{
+  width: 90%;
+  height: 25%;
   display: flex;
-  flex-direction: column;
+  align-self: center;
+  border: 1px solid black;
+  padding:4px;
+}
+& p {
+   padding-left: 25px;
+   font-size: 15px;
+   font-family: "Montserrat", serif;     
+
+
+}
+
+}
+
+
+.donaTon{
+  width: 92%;
+  height: 30%;
+  border-radius: 0px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
-}
+  align-self: center;
+  border: 1px solid black;
+  margin-bottom: 10px;
 
-.sponsorDiv1 {
-  width: 100%;
-  height: 90%;
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-
-.sponsorDiv2 {
-  width: 100%;
-  height: 90%;
-  display: flex;
-  gap: 15px;
-}
-
-.sponsorImg {
-  width: 100%;
-  height: 90%;
-  background-color: white;
-}
-
-.sponsorImg1 {
-  width: 100%;
-  height: 90%;
-  background-color: white;
 }
