--- a/src/Style/Donateform.css
+++ b/src/Style/Donateform.css
@@ -1,15 +1,5 @@
 .formBody{
     width: 100%;
-    height: 100vh;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:#4aee13
-}
-
-.donateimgPart{.formBody{
-    width: 100%;
     height: max-content;
     overflow-y: auto;
     display: flex;
@@ -63,8 +53,7 @@
 
   & h4{
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
+    font-family: "Montserrat", serif;  }
 }
 
 .donaButton{
@@ -83,8 +72,7 @@
    border-radius: 0px;
    background-color: transparent;
    font-weight: 100; 
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+   font-family: "Montserrat", serif;}
 
 .fillForm{
    width: 90%;
@@ -92,6 +80,7 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
+   font-family: "Montserrat", serif;
 
 
    & h1{
@@ -140,8 +129,7 @@ margin-left: 70px;
   & p {
      padding-left: 25px;
      font-size: 15px;
-     font-family: Verdana, Geneva, Tahoma, sans-serif;
-     
+     font-family: "Montserrat", serif;     
 
 
   }
@@ -159,13 +147,5 @@ margin-left: 70px;
     align-self: center;
     border: 1px solid black;
     margin-bottom: 10px;
-
-}
-    width: 95%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.741);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
 }
