--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -4,15 +4,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: transparent;
+    font-family: Montserrat;
 
 }
 
 .header_wrapper{
-    width: 60%;
+    position: fixed;
+    z-index: 2;
+    top: 20px;
+    width: 70%;
     height: 100px;
     border-radius: 50px;
-    /* background-color: white; */
+    background-color: white;
     display: flex;
+    align-self: center;
+    justify-self: center;
+    left: 280px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
@@ -38,13 +46,18 @@
     justify-content: space-around;
     align-items: center;
 
-
+    & a{
+        text-decoration: none;
+    }
 
     & h4{
-        font-size: 15px;
+        font-size: 16px;
+        font-weight: 400;
+        text-transform: uppercase;
         cursor: pointer;
         transition:  color 0.3 ease;
         color: black;
+        
     }
 
     & h4:hover{
@@ -66,7 +79,7 @@
     justify-content: center;
     width: 100px;
     height: 40px;
-    color: white;
+    color: black;
     background-color: lime;
     cursor: pointer;
 
