--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -4,13 +4,14 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    z-index: 2;
     
 }
 
 .langingPage{
     width: 100%;
     height: 100vh;
-    background: url(../assets/Images/Hero-page.png) no-repeat center center/cover;
+    background: url(../../assets/Images/Hero-page.png) no-repeat center center/cover;
     position: relative;
     
 
@@ -29,8 +30,10 @@
         /* background-color: whitesmoke; */
         text-align: center;
         color: white;
+        font-family: "Montserrat", serif;
        }
     }
+
 }
 
 .OurFocusMain{
@@ -39,7 +42,7 @@
     /* background-color: black; */
     display: flex;
     flex-direction: column;
-    background: url(../assets/Images/group-happy-african-children-drinking-water-from-faucetclean-water-problems_892345-1839.jpg)   no-repeat center center/cover;
+    background: url(../../assets/Images/group-happy-african-children-drinking-water-from-faucetclean-water-problems_892345-1839.jpg)   no-repeat center center/cover;
     position: relative;
 
     & section{
@@ -70,7 +73,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(../assets/Images/babygirlEdite.jpg)   no-repeat center center/cover;
+    background: url(../../assets/Images/babygirlEdite.jpg)   no-repeat center center/cover;
     border-radius: 20px;
     position: relative;
 
@@ -92,6 +95,7 @@
     flex-direction: column;
     gap: 30px; 
     color: white;
+    /* font-family: "Montserrat"; */
   }
   
   .description-container {
@@ -105,7 +109,7 @@
   .description-container p {
     white-space: pre-line; 
     font-size: 15px;
-    font-family: Arial, sans-serif;
+    font-family: "Montserrat";
     width: 100%;
     padding: 10px;
     line-height: 1.8; 
@@ -128,6 +132,7 @@
     align-items: center;
     justify-content: center;
     font-size: 27px;
+    font-family: "Montserrat", serif;
 }
 
 .textTop{
@@ -135,8 +140,9 @@
     height: 46%;
     background-color: white;
     color: black;
-    font-size: 15px;
+    font-size: 30px;
     text-align: justify;
+    font-family: "Montserrat", serif;
 }
 
   
@@ -145,197 +151,410 @@
     height: 46%;
     background-color: white;
     color: black;
+     font-family: "Montserrat", serif;
 }
-
-
 
 
 .aboutUsMainContainer{
-    width: 100%;
-    height: max-content;
-    background-color: aqua;
-}
-
-.ourApproach{
     width: 100%;
     height: 100vh;
     background-color: white;
     display: flex;
     flex-direction: column;
-    gap: 15px;
     align-items: center;
-    padding: 20px;
+    gap: 20px;
+    padding-top: 50px;
+    /* margin-top: 100px; */
 }
-
 .greenBox{
-    width: 40%;
-    height: 12%;
-    background-color: #9bf809;
-    border-radius: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: #091e00;
+  width: 40%;
+  height: 12%;
+  background-color: #9bf809;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  color: #091e00;
+  font-family: "Montserrat", serif;
 }
 
 .blackBox{
-    width: 50%;
-    height: 20%;
-    background-color: #121212;
-    border-radius: 50px;
-    padding: 26px;
-    display: flex;
-    gap: 10px;
+  width: 70%;
+  height: 20%;
+  background-color: #121212;
+  border-radius: 50px;
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+  
+  
 
-    & article{
-        width: 20%;
-        height: 92%;
-        background-color: #366227;
-        border-radius: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fefffe;
-        font-size: 12px;
-    }
+  & article{
+      width: 20%;
+      height: 92%;
+      background-color: #366227;
+      border-radius: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fefffe;
+      font-size: 40px;
+      font-family: "Montserrat", serif;
+  }
 
-    & section{
-        width: 75%;
-        height: 100%;
-        flex-direction: column;
-        /* background-color: #fefffe; */
-        color: #fefffe;
-        font-size: 12.7px;
-    }
+  & section{
+      width: 75%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      /* align-items: center; */
+      justify-content: center;
+      text-align: justify;
+      /* background-color: #fefffe; */
+      color: #fefffe;
+      font-size: 22px;
+      gap: 5px;
+      font-family: "Montserrat", serif;
+  }
 }
 
-
 .darkGreen{
-    width: 40%;
-    height: 14%;
-    background-color: #366227;
-    border-radius: 44px;
-    padding: 18px;
-    gap: 20px;
-    display: flex;
+  width: 40%;
+  height: 14%;
+  background-color: #366227;
+  border-radius: 44px;
+  padding: 18px;
+  gap: 20px;
+  display: flex;
 
-    & article{
-        width: 29%;
-        height: 92%;
-        background-color: #9bf809;
-        border-radius: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-        font-size: 12px;
-    }
+  & article{
+      width: 29%;
+      height: 92%;
+      background-color: #9bf809;
+      border-radius: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: black;
+      font-size: 12px;
+      font-family: "Montserrat", serif;
+      font-size: 20px;
+  }
 
-    & section{
-        width: 68%;
-        height: 100%;
-        display: flex;
-        color: #f2ffee;
-        align-items: center;
-    }
+  & section{
+      width: 68%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      color: #f2ffee;
+      font-family: "Montserrat", serif;
+      font-size: 20px;
+      /* background-color: red; */
+  }
 }
 
 .ourPhiDiv{
-    width: 80%;
-    height: 55%;
-    /* background-color: aqua; */
-    display: flex;
-    gap: 13px;
-    flex-direction: column;
-    margin-top: 15px;
+  width: 90%;
+  height: 50%;
+  /* background-color: aqua; */
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  flex-direction: column;
+  /* margin-top: 15px; */
+  font-family: "Montserrat";
 }
 
 .topnav{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: space-between;
-   
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: space-between;
+ 
 
-    & section{
-        width: 15%;
-        height: 100%;
-        display: flex;
-        color: #f2ffee;
-        align-items: center;
-        background-color: #121212;
-        border-radius: 25px;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        font-size: 20px;
+  & section{
+      width: 15%;
+      height: 100%;
+      display: flex;
+      color: #f2ffee;
+      align-items: center;
+      background-color: #121212;
+      border-radius: 25px;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+      font-size: 20px;
+      font-family: "Montserrat", serif;
 
-    }
+  }
 }
 
 .downnav{
-    width: 100%;
-    height: 90%;
-    /* background-color: black; */
+  width: 100%;
+  height: 80%;
+  /* background-color: navy; */
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+ 
+
+  & article{
+    width: 40%;
+    height: 100%;
+    background-color: white;
+    color:#000;
+    gap: 15px;
+    font-family: "Montserrat";
+    font-size: 15px;
+    /* border: 1px solid black; */
+    
+  }
+
+  & section{
+    width: 40%;
+    height: 100%;
+    background-color: white;
+    color:#000;
+    gap: 10px;
+    font-family: "Montserrat";
+    font-size: 15px;
+    /* border: 1px solid black; */
     display: flex;
-    justify-content: space-between;
-
-    & article{
-        width: 30%;
-        height: 100%;
-        background-color: white;
-        /* border: 1px solid black; */
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        color: #1a1a1a;
-        font-size: 15px;
-        text-align: justify;
-        justify-content: stretch;
-        padding-bottom: 10px;
-    }
+    flex-direction: column;
+  }
 }
-
-.ourApproachConntinue{
+.ConntinueourApproach{
     width: 100%;
     height: 100vh;
-    background-color:white;
-    padding-top: 10px;
+    /* background-color:black; */
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    /* margin-top: 100px; */
 }
 
 .lastUp{
     width: 100%;
     height: 10%;
     background-color: black;
+    font-family: "Montserrat";
 }
 
 .partners-section {
-    width:  80%;
     height: 50%;
-    background: #2F4F2F;
+    width: 70%;
+    background-color: #2e5d25; 
     color: white;
-    text-align: center;
-    padding: 40px 0;
-    margin-top: 40px;
+    padding: 40px;
     display: flex;
-    border-radius: 20px;
-}
+    align-items: center;
+    justify-content: center;
+    /* padding-left: 50px; */
+  }
+  
+  .partners-container {
+    width: 70%;
+    height: 90%;
+    /* background-color: black; */
+    display: flex;
+    align-items: center;
+    width: 100%;
+    font-family: "Montserrat";
+  }
+  
+  .partners-text {
+    flex: 1;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 70px;
+    font-family: "Montserrat";
+  }
+  
+  .partners-logos {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 10px;
+    /* background-color: black;   */
+  }
 
-.partners-logos {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+  .partnersLogosTop{
+    width: 100%;
+    height: 50%;
+    /* background-color: black; */
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-}
+    font-size: 20px;
+    gap: 10px;
 
-.partners-logos img {
-    width: 100px;
-    height: auto;
-}
+    & div{
+        width: 30%;
+        height: 100%;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        & img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+  }
+
+  .partnersLogosDown{
+    width: 100%;
+    height: 50%;
+    /* background-color: white; */
+    /* color: white; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    gap: 10px;
+
+    & div{
+        width: 30%;
+        height: 100%;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+           & img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+  }
+
+  .donation-sectionMain{
+    width: 100%;
+    height: 45vh;
+    /* background-color: #000; */
+  }
+  
+  .donation-section {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding: 50px 20px;
+    border-radius: 20px;
+    margin: 10px;
+    /* font-size: large; */
+  }
+  
+  .donation-section h2 {
+    color: black;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    /* font-family: "Montserrat"; */
+  }
+  
+  .donate-button {
+    background: #366227;
+    color: white;
+    padding: 15px 25px;
+    font-size: 16px;
+    /* font-family: "Montserrat"; */
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+  }
+  
+  .donate-button:hover {
+    background: #9bf809;
+    color: #000;
+  }
+
+  @media screen and (width <= 450px) { 
+    .langingPage{
+        width: 100%;
+        height: 400px;
+        background: url(../../assets/Images/Hero-page.png) no-repeat center center/cover;
+        position: relative;
+        
+    
+      & section{
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(104, 104, 104, 0.068), rgb(0, 0, 0)85%);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+       
+        & div{
+          width: 70%;
+          height: 17%;
+          /* background-color: whitesmoke; */
+          text-align: center;
+          color: white;
+          font-size: 10px;
+          font-family: "Montserrat", serif;
+
+          & h1{
+            font-size: 15px;
+          }
+        }
+      }
+    }
+
+    .OurFocusMain{
+        width: 100%;
+        height: 400px;
+        /* background-color: black; */
+        display: flex;
+        flex-direction: column;
+        background: url(../../assets/Images/group-happy-african-children-drinking-water-from-faucetclean-water-problems_892345-1839.jpg)   no-repeat center center/cover;
+        position: relative;
+    
+        & section{
+            width: 100%;
+            height: 400px;
+            background: rgba(0, 0, 0, 0.74);
+            display: flex;
+           
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+    
+            & nav{
+                width: 100%;
+                height: 300px;
+                /* background-color: white; */
+                display: flex;
+                /* flex-direction: column; */
+                /* flex-direction: column-reverse; */
+                justify-content: center;
+                align-items: center;
+                gap: 30px ;
+                position: relative;
+                overflow-x: auto;
+            }
+        }
+    }
+
+    .focusImage{
+        width: 100%;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: url(../../assets/Images/babygirlEdite.jpg)   no-repeat center center/cover;
+        border-radius: 20px;
+        position: relative;
+    
+    
+    }
+  }
+  
+
+  
