--- a/src/pages/Features/feature.css
+++ b/src/pages/Features/feature.css
@@ -1,6 +1,6 @@
 .featurewrapper {
     width: 100%;
-    /* height: 150vh; */
+    height: auto;
     background-color: black;
    
    
@@ -49,19 +49,20 @@
     color: #ffffff;
     font-weight: 600;
     font-size: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
 .featuredonatebtn {
     background-color: #366227;
     margin-top: 30px;
     border-radius: 8px;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
     cursor: pointer;
     color: white;
     font-size: 20px;
     border: 0;
+    font-weight: 600;
 }
 
 h2 {
@@ -75,6 +76,7 @@ h2 {
     background-color: #abfc29;
     transform: scale(1.05);
     transition:  0.3s ease, transform 0.6s ease;
+    color: #000;
        
 }
 /* .featuredonatebtn h2 :hover{
@@ -145,20 +147,30 @@ h2 {
 
 .imageAndTextLayers .imageHolder5{
     width: 30%;
-    height: 90%;
+    height: 95%;
     background-image: url(../assets/Images/Baby-with-Cancer-6.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 50% 50% 0% 0%;
 }
+.textLayerHeading5 {
+    width: 37%;
+    height: 15%;
+    background-color: darkgreen;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    padding-top: 10px;
+    
+}
 
 .imageAndTextLayers .imageHolder6{
-    width: 30%;
-    height: 90%;
+    width: 25%;
+    height: 70%;
     background-image: url(../assets/Images/Hamzat.png);
     background-position: center;
     background-size: cover;
-    border-radius: 50% 50% 0% 50%;
+    border-radius: 50% 40% 0% 50%;
 }
 
 
@@ -169,12 +181,17 @@ h2 {
     height: max-content;
     padding: 5px;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     background: #366227;
     
     & h1{
         font-size: 23px;
+        
     }
+   
+}
+p {
+    font-weight: 500;
 }
 
 .imageAndTextLayers .layerTextWrapper{
@@ -186,3 +203,177 @@ h2 {
     background: white;
 }
 
+.donation-sectionMain{
+    width: 100%;
+    height: 45vh;
+    /* background-color: #000; */
+  }
+  
+  .donation-section {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding: 50px 20px;
+    border-radius: 20px;
+    margin: 10px;
+    /* font-size: large; */
+  }
+  
+  .donation-section h2 {
+    color: black;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    /* font-family: "Montserrat"; */
+  }
+  
+  .donate-button {
+    background: #366227;
+    color: white;
+    padding: 15px 25px;
+    font-size: 16px;
+    /* font-family: "Montserrat"; */
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+  }
+  
+  .donate-button:hover {
+    background: #9bf809;
+    color: #000;
+  }
+
+/* .partnersDiv {
+    width: 95%;
+    height: 70vh;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .partnersLink {
+    width: 80%;
+    height: 65%;
+    background-color: #366227;
+    display: flex;
+  }
+  
+  .meetDiv {
+    width: 35%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .meetDiv h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-size: 40px;
+  }
+  
+  .sponsorDiv {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+  }
+  
+  .sponsorDiv1 {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  
+  .sponsorDiv2 {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    gap: 15px;
+  }
+  
+  .sponsorImg {
+    width: 100%;
+    height: 90%;
+    background-color: white;
+  }
+  
+  .sponsorImg1 {
+    width: 100%;
+    height: 90%;
+    background-color: white;
+} */
+
+.partnermotto {
+    width: 100%;
+    height: 1900%;
+    /* background-color: red; */
+    padding-left: 9.5%;
+    padding-right: 8%;
+    display: flex;
+    flex-direction: column;
+    gap: 3%;
+  
+ & .partnerstext {
+      width: 100%;
+      height: 20%;
+      background-color: #3d752a;
+      display: flex;
+      margin-top: 5%;
+  
+     & p {
+        width: 40%;
+        height: 100%;
+        margin-top: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 40px;
+        font-weight: 700;
+        color: white;
+      }
+  
+      & .partLogoimage {
+        width: calc(100% - 40%);
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        padding: 20px;
+  
+        & .box1 {
+          width: 22%;
+          height: 47%;
+          background-color: white;
+  
+          & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+  
+}
+.supportpage { 
+
+    width: 70%;
+    height: 40%;
+    /* background-color: #366227; */
+    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
+    
+}
+
+.supportpage h1 {
+    font-weight: 800;
+}
